@@ -62,6 +62,7 @@ main(int argc, char** argv)
     init_array();
 
 #pragma scop
+#pragma live-out w
     for (i=0; i<N; i++)
         for (j=0; j<N; j++)
             A[i][j] = A[i][j] + u1[i]*v1[j] + u2[i]*v2[j];
